# git-fried

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOGFOOD.md  LICENSE  NEXT-SESSION.md  README.md  REVIEW.md  SECURITY.md  lefthook.yml  package.json  playwright.config.ts  playwright.tauri.config.ts  research.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: .eslintrc.cjs  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest-setup.ts
apps/desktop/src-tauri/: Cargo.toml  deny.toml  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/benches/: git_perf.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: alias.rs  auth.rs  auth_oauth.rs  error.rs  launchpad.rs  lib.rs  main.rs  menu.rs  panic_hook.rs  profiles.rs  secret_mask.rs
apps/desktop/src-tauri/src/ai/: mod.rs  prompts.rs  runner.rs
apps/desktop/src-tauri/src/forge/: gitea.rs  github.rs  mod.rs  model.rs
apps/desktop/src-tauri/src/git/: bisect.rs  branch.rs  bulk.rs  cherry_pick.rs  clone.rs  commit.rs  compare.rs  config_local.rs  conflict_prediction.rs  diff.rs  file_history.rs  graph.rs  hide.rs  hooks.rs  identity_stats.rs  lfs.rs  maintenance.rs  merge.rs  mod.rs  path.rs  profile_apply.rs  profile_match.rs  range_diff.rs  read_file.rs  rebase.rs  reflog.rs  remote.rs  repository.rs  repository_meta_backfill.rs  reset.rs  restore.rs  runner.rs  sparse.rs  stage.rs  stash.rs  status.rs  submodule.rs  sync.rs  tag.rs  tests.rs  (+1 more)
apps/desktop/src-tauri/src/importer/: gitkraken.rs  mod.rs
apps/desktop/src-tauri/src/ipc/: ai_commands.rs  alias_commands.rs  bisect_commands.rs  branch_commands.rs  commands.rs  commit_commands.rs  diagnostic_commands.rs  forge_commands.rs  graph_commands.rs  hide_commands.rs  hooks_commands.rs  importer_commands.rs  launchpad_commands.rs  lfs_commands.rs  merge_commands.rs  mod.rs  profile_commands.rs  pty_commands.rs  rebase_commands.rs  remote_commands.rs  repo_commands.rs  search_commands.rs  sparse_commands.rs  stash_commands.rs  status_commands.rs  submodule_commands.rs  sync_commands.rs  tag_commands.rs  test_commands.rs  v02_commands.rs  workspace_commands.rs  worktree_commands.rs
apps/desktop/src-tauri/src/pty/: mod.rs
apps/desktop/src-tauri/src/storage/: db.rs  mod.rs
apps/desktop/src-tauri/src/storage/migrations/: 0001_initial.sql  0002_hide_solo_branches.sql  0003_launchpad_pr_meta.sql  0004_repo_alias.sql  0005_commits_lookup_index.sql  0006_repo_forge_account_override.sql  0007_repo_ssh_key_override.sql  0008_keybindings_custom.sql  0009_repo_profile_binding.sql
apps/desktop/src-tauri/tests/: sqlite_pool_acquire_timeout.rs
bench/: README.md  baseline.json  memory.ps1
bench/gitkraken-spike/: README.md  auto-screenshot.ps1  capture-pw.ps1  capture-screen.ps1  capture-window.ps1  click-at-coord.ps1  find-build-procs.ps1  find-windows.ps1  hello.ahk2  launch.mjs  resize-window.ps1  session-cleanup.ps1
docs/: IMPLEMENTATION-STATUS.md  QUICK_START.md
docs/analyze/: 2026-05-13-155359-recommendations-deep-dive.md  2026-05-13-160000-codex-cross-verify.md  2026-05-14-130652.md  2026-05-14-203726.md  2026-05-16-110711.md  2026-05-16-130243-llm-test-ux.md  2026-05-18-110302.md  2026-05-18-164133.md  2026-05-26-104500.md  2026-05-27-142844.md  2026-06-16-144648.md
docs/api/: tauri-commands.md
docs/code-review/: 2026-05-13-200956.md  2026-05-16-133000.md  2026-05-18-142614.md  2026-05-27-button-size-vs-gitkraken.md
docs/design-context/: 00-product-brief.md  01-design-tokens.md  02-component-inventory.md  03-screens-and-flows.md  04-interaction-patterns.md  05-figma-handoff-brief.md  06-gitkraken-feature-parity.md  README.md
docs/plan/: 00-overview.md  01-why-and-positioning.md  02-user-workflow-evidence.md  03-feature-matrix.md  04-tech-architecture.md  05-roadmap-v0.1-v1.0.md  06-risks-and-pitfalls.md  07-design-decisions.md  08-references.md  09-interactive-rebase.md  10-integrated-terminal.md  11-gitkraken-benchmark.md  12-ui-improvement-plan.md  13-implementation-vs-plan-diff.md  14-additional-gitkraken-gaps.md  15-quality-cleanup.md  16-line-stage-v2.md  17-v1.x-roadmap.md  18-dogfood-feedback.md  19-v0.3-release-prep.md  20-performance-benchmark.md  21-gitkraken-migration.md  22-ui-polish-v2.md  23-design-system-extraction.md  24-visual-refactor.md  25-gitkraken-layout-migration.md  26-3constraints-identity.md  27-core-tech-boundaries.md  28-light-theme-audit.md  29-deep-research-rescope.md  30-ux-comprehensive-c55-batch.md  31-ultraplan-v1.0-roadmap.md  32-ultraplan-perf-safety-c82.md  35-full-app-audit-hybrid.md  (+13 more)
e2e/: actions.spec.ts  commit.spec.ts  fixture-a11y.tauri.spec.ts  fixture-dark-mode.tauri.spec.ts  fixture-isolation.tauri.spec.ts  fixture-mutation-roundtrip.tauri.spec.ts  fixture-transient.tauri.spec.ts  fixture-ui-render.tauri.spec.ts  fixture-visual-sweep.tauri.spec.ts  gitkraken-parity.spec.ts  helpers.ts  repositories.spec.ts  settings.spec.ts  shortcuts.spec.ts  smoke.spec.ts  stash.spec.ts  status.spec.ts  tauri-guard.spec.ts  tauri-webdriver-smoke.spec.ts  worktree.spec.ts
scripts/: capture-screens.ts  cargo-rustup.mjs  check-prod-bundle-clean.mjs  dev-cleanup.mjs  generate-tauri-commands-index.mjs  god-comp-check.mjs  i18n-leaf-count.mjs  lefthook-commit-msg.sh  re-verify.mjs  run-ahk2.ps1  run-all-tours.ps1  tauri-rustup.mjs  ui-shot.mjs  ui-surface-exempt.txt  ui-surface-inventory.mjs  ui-sweep.mjs
(+409 files in other folders)
