[package]
name = "git-fried"
version = "0.0.0"
description = "GitKraken alternative desktop git client"
authors = ["tgkim"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "git_fried_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"

# 비동기 / 에러
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }

# 인코딩 (한글 안전 디코딩의 핵심)
encoding_rs = "0.8"
unicode-normalization = "0.1"

# DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }

# HTTP (Forge API 용 — v0.1 Sprint 5)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 파일 watching (v0.1 Sprint 4 에서 활용)
notify = "6.1"

# 로그
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 시간
chrono = { version = "0.4", features = ["serde"] }

# 기타
parking_lot = "0.12"
once_cell = "1.20"
dirs = "5.0"
# 임시 파일 (한글 commit message file-based -F)
tempfile = "3.13"

# OS keychain — PAT / SSH passphrase 저장
keyring = { version = "3.4", features = ["apple-native", "windows-native", "linux-native"] }
# URL parsing for forge clients
url = "2.5"
# regex for secret masking (AI subprocess input)
regex = "1.10"

# 통합 터미널 (`docs/plan/10 옵션 A`) — Windows ConPTY / Unix forkpty 추상화
portable-pty = "0.8"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

# 릴리즈 빌드 최적화
[profile.release]
opt-level = "s"      # 바이너리 크기 우선 (성능 손실 미미)
lto = true
codegen-units = 1
strip = true
panic = "abort"
