[package]
name = "git-fried"
version = "0.3.0"
description = "GitKraken alternative desktop git client"
authors = ["tgkim"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "git_fried_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-deep-link = "2.0"
tauri-plugin-dialog = "2.0"
# tauri-plugin-fs : capability 차단 (capabilities/default.json — c40 SEC-010).
# Frontend `@tauri-apps/plugin-fs` import 0건. plan/04 §file-system-watch (notify 통합) 의
# 자매 reservation — v0.x 후속 .git refs/index watch 시 capability scope 부활 예정.
# 2026-05-08 /analyze c53: 위 의도 보존 결정 유지 (User Decision A 동일).
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"

# 비동기 / 에러
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
# Sprint c45 PERF-4 — futures::future::join_all (worktree dirty 병렬). tokio 가 transitively 가짐.
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }

# 인코딩 (한글 안전 디코딩의 핵심)
encoding_rs = "0.8"
unicode-normalization = "0.1"

# DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }

# HTTP (Forge API 용 — v0.1 Sprint 5)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 파일 watching — `docs/plan/04 §file-system-watch` (v0.x 후속).
# TODO(plan/04): notify::Watcher 통합 후 제거 가능 여부 재평가.
# 2026-05-05 /analyze: 코드 0 import 확인 (5-Check certain). plan/04 의 외부 변경 감지
# (.git refs / index / FETCH_HEAD watch) 로드맵 보존 차원에서 잔존.
# 2026-05-06 /analyze 재확인: 사용량 0 동일, 의도 보존 결정 유지 (User Decision A).
# 2026-05-08 /analyze c53 재확인: 사용량 0 동일. plugin-fs 와 자매 reservation (위 21:참조).
notify = "6.1"

# 로그
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 시간
chrono = { version = "0.4", features = ["serde"] }

# 기타
parking_lot = "0.12"
once_cell = "1.20"
dirs = "5.0"
# 임시 파일 (한글 commit message file-based -F)
tempfile = "3.13"

# OS keychain — PAT / SSH passphrase 저장
keyring = { version = "3.4", features = ["apple-native", "windows-native", "linux-native"] }
# URL parsing for forge clients
url = "2.5"
# regex for secret masking (AI subprocess input)
regex = "1.10"

# 통합 터미널 (`docs/plan/10 옵션 A`) — Windows ConPTY / Unix forkpty 추상화
portable-pty = "0.8"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
# Sprint c89-B Phase 1.2 (plan/36 §2.1.2) — Forge API 401/403/429 fault injection.
# dev-only HTTP mock server. reqwest 호출 가로채 status / header 검증.
httpmock = "0.7"
# Sprint c89-B Phase 2 (plan/36 §3 Option B POC, 2026-05-15) — Tauri test feature
# `tauri = { features = ["test"] }` 시도 결과 Windows 환경 STATUS_ENTRYPOINT_NOT_FOUND
# (WebView2 DLL 의존). 본 dev-dep 제거 — plan/36 v0.3 결과 documented + Linux/macOS
# 또는 Tauri 후속 release 에서 재시도.
# perf benchmark (`docs/plan/20 §3-1`)
criterion = { version = "0.5", features = ["html_reports"] }

# 릴리즈 빌드 최적화
[profile.release]
opt-level = "s"      # 바이너리 크기 우선 (성능 손실 미미)
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Performance bench — 실행: `BENCH_REPO=/path/to/repo cargo bench --bench git_perf`
[[bench]]
name = "git_perf"
harness = false
